add link to pdf in steckbrief.htm

--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -1,6 +1,6 @@
 <style>td {
     vertical-align: top;
-    font-family: arial;
+    font-family: arial,serif;
     font-size: small;
     background: #eeeeee
 }</style>
@@ -15,8 +15,7 @@
              <a href="link" target="_blank">Applikation.swf (01.01.2111)</a><br />
              -->
             <a href="https://github.com/cornelius-99/Softwaredesign" target="_blank">Repo</a><br/>
-            <!--<a href="https://derlele.github.io/SoftwareDesignHFU/L_02/" target="_blank">L_02 => Hello World
-                [27.04.20]</a><br/>-->
+            <a href="https://cornelius-schaub.com/Softwaredesign/Zufallsgedicht/ZufallsgedichtUML_Cornelius_Schaub.pdf" target="_blank">Zufallsgedigt UML</a><br/>
         </td>
         <td></td>
     </tr>
