--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -7,7 +7,7 @@
 <table width="100%" height="100%" border="0" cellpadding="2" cellspacing="0">
     <tr>
         <td width="200">
-            <!-- dieser Block wird am Ende des Semesters wichtig sein, bitte nicht löschen
+            <!-- dieser Block wird am Ende des Semesters wichtig sein, bitte nicht lï¿½schen
                 Titel<br /></br />
              <a href="Anforderungsliste.htm" target="_blank">Anforderungsliste (01.01.2111)</a><br />
              <a href="link" target="_blank">Kurzkonzept (01.01.2111)</a><br />
@@ -16,6 +16,7 @@
              -->
             <a href="https://github.com/cornelius-99/Softwaredesign" target="_blank">Repo</a><br/>
             <a href="https://cornelius-schaub.com/Softwaredesign/Zufallsgedicht/ZufallsgedichtUML_Cornelius_Schaub.pdf" target="_blank">Zufallsgedigt UML</a><br/>
+            <a href="https://cornelius-schaub.com/Softwaredesign/Zufallsgedicht/" target="_blank">Zufallsgedicht Umsetzung (Patrick Kaserer)</a><br/>
         </td>
         <td></td>
     </tr>
