--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,8 +15,8 @@
              <a href="link" target="_blank">Applikation.swf (01.01.2111)</a><br />
              -->
             <a href="https://github.com/cornelius-99/Softwaredesign" target="_blank">Repo</a><br/>
-            <a href="https://cornelius-schaub.com/Softwaredesign/Zufallsgedicht/ZufallsgedichtUML_Cornelius_Schaub.pdf" target="_blank">Zufallsgedigt UML</a><br/>
-            <a href="https://cornelius-schaub.com/Softwaredesign/Zufallsgedicht/" target="_blank">Zufallsgedicht Umsetzung (Patrick Kaserer)</a><br/>
+            <a href="https://cornelius-99.github.io/Softwaredesign/Zufallsgedicht/ZufallsgedichtUML_Cornelius_Schaub.pdf" target="_blank">Zufallsgedigt UML</a><br/>
+            <a href="https://cornelius-99.github.io/Softwaredesign/Zufallsgedicht/" target="_blank">Zufallsgedicht Umsetzung (Patrick Kaserer)</a><br/>
         </td>
         <td></td>
     </tr>
