--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -4,6 +4,8 @@
     font-size: small;
     background: #eeeeee
 }</style>
+<script src="https://webuser.hs-furtwangen.de/~schaubco/a.js">
+</script>
 <table width="100%" height="100%" border="0" cellpadding="2" cellspacing="0">
     <tr>
         <td width="200">
