--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -17,6 +17,7 @@
             <a href="https://github.com/cornelius-99/Softwaredesign" target="_blank">Repo</a><br/>
             <a href="https://cornelius-99.github.io/Softwaredesign/Zufallsgedicht/ZufallsgedichtUML_Cornelius_Schaub.pdf" target="_blank">Zufallsgedicht UML</a><br/>
             <a href="https://cornelius-99.github.io/Softwaredesign/Zufallsgedicht/" target="_blank">Zufallsgedicht Umsetzung (Patrick Kaserer)</a><br/>
+            <a href="https://github.com/cornelius-99/Softwaredesign/tree/master/Quiz/UML" target="_blank">UML Quiz</a><br/>
         </td>
         <td></td>
     </tr>
